--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html> 
 <html>
-
+<head>
+    <meta charset="utf-8">
+</head>
 <body>
   <h1>Linda</h1>
   <p>Welcome to this page about me!</p>
