--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html> 
-<html>
+<html lang="sv">
 <head>
     <meta charset="utf-8">
     <title> Portfolio </title> 
 </head>
 <body>
-  <h1>Linda</h1>
-  <p>Welcome to this page about me!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <header> 
+     <h1>Linda@tenvikslinda</h1>
+  </header>
+  <main>
+     <p>Welcome to this page about me!</p>
+     <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  </main>
 </body>
 
 </html>
